--- a/blueticket/front-Blueticket/index.html
+++ b/blueticket/front-Blueticket/index.html
@@ -12,25 +12,24 @@
     <div class="container">
         <h1>Cadastro de Eventos</h1>
         
-        <form id="event-form">
-            <input type="text" id="title" placeholder="Título" required>
-            <input type="text" id="description" placeholder="Descrição" required>
-            <input type="text" id="location" placeholder="Localização" required>
-            <input type="text" id="imageUrl" placeholder="URL da Imagem">
-            <input type="text" id="price" placeholder="Preço" required>
+        <form id="event-form" aria-label="Formulário de Cadastro de Eventos">
+            <input type="text" id="title" placeholder="Título" required aria-required="true">
+            <input type="text" id="description" placeholder="Descrição" required aria-required="true">
+            <input type="text" id="location" placeholder="Localização" required aria-required="true">
+            <input type="url" id="imageUrl" placeholder="URL da Imagem" aria-label="Insira a URL da imagem">
+            <input type="number" id="price" placeholder="Preço" required >
             <button type="submit">Adicionar Evento</button>
         </form>
         
-
         <h2>Eventos Cadastrados</h2>
-        <ul id="events-list"></ul>
+        <ul id="events-list" role="list"></ul>
 
-        <div class="event-details" id="event-details" style="display: none;">
-            <h3>Detalhes do Evento</h3>
+        <div class="event-details" id="event-details" style="display: none;" aria-labelledby="event-details">
+            <h3 id="event-details-title">Detalhes do Evento</h3>
             <p><strong>Título:</strong> <span id="detail-title"></span></p>
             <p><strong>Descrição:</strong> <span id="detail-description"></span></p>
             <p><strong>Localização:</strong> <span id="detail-location"></span></p>
-            <p><strong>Preço:</strong> <span id="detail-price"></span></p> <!-- Campo para mostrar o preço -->
+            <p><strong>Preço:</strong> <span id="detail-price"></span></p>
             <div id="detail-image-container" style="margin-top: 10px;">
                 <img id="detail-image" alt="Imagem do Evento" style="max-width: 100%; display: none;">
             </div>
@@ -39,4 +38,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
